# Institut-Transnational-de-Certification-des-Acteurs-Arm-s-ITCAA-

./: Bitacora  README-ai.md  README.md  auto_update_index.sh  link_check.sh  mypy.ini  predeploy_check.py  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  start.sh  test_check.sh  test_import.py
.github/workflows/: annual_report.yml  auto-index.yml  ci.yml  deploy.yml  deploy_render.yml  i18n-check.yml  offline-ai.yml  predeploy_check.yml  structure-check.yml  tests.yml  tracking_alerts.yml
apps/api/: actor_service.py  crypto_service.py  database.py  econ_service.py  i18n.py  main.py  models_cartography.py  models_diplomacy.py  transparency.py  validators.py
apps/api/db/: models.py
apps/demo/: components.py
bitacora/: ai-offline-jalons.md
configs/: actors_taxonomy.yml  security_policies.yml
data/dictionaries/: dih_principles.yml  internal_norms.yml
data/i18n/: ah.json  ar.json  en.json  fr.json
docs/: ARCHITECTURE.md  CERTIFICATION_PROTOCOL.md  ETHICS_AND_DIH.md  README.md
infra/: hf_spaces.md  render.yaml
infra/docker/: Dockerfile.api
itcaa_ai_offline/: requirements-ai.txt  routers.py  schemas.py  utils.py
protocols/: dih.yml  norms.yml
scripts/: check_i18n.py  export_geojson.py  seed_cartography.py  seed_econ.py  seed_portfolio.py
src/: init_db.py
src/itcaa_ai_offline/: __init__.py  config.py  index_builder.py  model_loader.py  predictor.py
static/: offline.js  search.js  styles.css
templates/: actor_detail.html  actors_list.html  base.html  report.html
tests/: test_structure.py  test_utils.py  tests_predictor.py
(+57 files in other folders)
